NULL =
AUTOMAKE_OPTIONS = 
ETAGS_ARGS = $(srcdir)/Makefile.am
EXTRA_DIST = autogen-version.def copyright.def debug-opt.def homerc.def version.def version.texi

SUBDIRS = isc

noinst_HEADERS =	\
	adjtime.h	\
	audio.h		\
	ascii.h		\
	audio.h		\
	binio.h		\
	gps.h		\
	hopf6039.h	\
	icom.h		\
	ieee754io.h	\
	iosignal.h	\
	l_stdlib.h	\
	lib_strbuf.h	\
	mbg_gps166.h	\
	mx4200.h	\
	ntif.h		\
	ntp.h		\
	ntp_assert.h	\
	ntp_calendar.h	\
	ntp_cmdargs.h	\
	ntp_config.h	\
	ntp_control.h	\
	ntp_crypto.h	\
	ntp_data_structures.h	\
	ntp_datum.h	\
	ntp_debug.h	\
	ntp_filegen.h	\
	ntp_fp.h	\
	ntp_if.h	\
	ntp_intres.h	\
	ntp_io.h	\
	ntp_libopts.h	\
	ntp_lineedit.h	\
	ntp_lists.h	\
	ntp_machine.h	\
	ntp_malloc.h	\
	ntp_md5.h	\
	ntp_net.h	\
	ntp_proto.h	\
	ntp_random.h	\
	ntp_refclock.h	\
	ntp_request.h	\
	ntp_rfc2553.h	\
	ntp_select.h	\
	ntp_sprintf.h	\
	ntp_stdlib.h	\
	ntp_string.h	\
	ntp_syscall.h	\
	ntp_syslog.h	\
	ntp_tty.h	\
	ntp_types.h	\
	ntp_unixtime.h	\
	ntpd.h		\
	ntpsim.h	\
	parse.h		\
	parse_conf.h	\
	recvbuff.h	\
	refclock_atom.h	\
	ssl_applink.c	\
	timepps-SCO.h	\
	timepps-Solaris.h	\
	timepps-SunOS.h	\
	trimble.h	\
	$(NULL)

